--- a/Translations/German/text-mission-change.xml
+++ b/Translations/German/text-mission-change.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- edited with XMLSpy v2019 rel. 3 sp1 (x64) (http://www.altova.com) by Andy Auseon (Mohawk Games) -->
+<!-- German Translation (© Revan ©) -->
+
 <Root>
 	<!--Name-->
 	<Entry>
@@ -208,6 +208,10 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_MISSION_FAMILY_MARRIAGE</zType>
+		<Translation>Famillen Heirat</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_MISSION_FAMILY_MARRIAGE_TARGET</zType>
 		<Translation>Famillen Heirat</Translation>
 	</Entry>
 	<Entry>
