--- a/Translations/German/text-religion-change.xml
+++ b/Translations/German/text-religion-change.xml
@@ -1,5 +1,7 @@
+<!-- German Translation (© Revan ©) -->
+
 <Root>
-	<!--Translation Indices: Noun ~ Adjective ~ Indefinite & Adjective ~ Plural-->
+	<!--English Indices: Noun ~ Adjective ~ Indefinite & Adjective ~ Plural-->
 	<Entry>
 		<zType/>
 		<Translation/>
