--- a/Translations/German/ModInfo.xml
+++ b/Translations/German/ModInfo.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0"?>
 <ModInfo xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <displayName>German Translation Part 1</displayName>
+  <displayName>German Translation</displayName>
   <description>Deutsche Übersetzung</description>
   <modpicture>1920px-Flag_of_Germany.svg.png</modpicture>
-  <author>Revan/ShadowDuke</author>
+  <author>Revan (aka. ShadowDuke)</author>
   <modioID>143281</modioID>
   <modioFileID>1197287</modioFileID>
-  <modversion>for 0.1.50948</modversion>
+  <modversion>RC1</modversion>
   <homepage>https://github.com/ShadowDuke/OW_GermanPatch</homepage>
   <singlePlayer>true</singlePlayer>
   <multiplayer>true</multiplayer>
