--- a/Translations/German/text-effectUnit-change.xml
+++ b/Translations/German/text-effectUnit-change.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- edited with XMLSpy v2014 rel. 2 (x64) (http://www.altova.com) by Soren Johnson (private) -->
+<!-- German Translation (© Revan ©) -->
+
 <Root>
 	<!--Name-->
 	<Entry>
@@ -225,6 +225,10 @@
 	<Entry>
 		<zType>TEXT_EFFECTUNIT_FIRESHIP</zType>
 		<Translation>Brander</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_EFFECTUNIT_LADING</zType>
+		<Translation>Belandend</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTUNIT_INGENUITY</zType>
