--- a/Translations/German/text-improvementClass-change.xml
+++ b/Translations/German/text-improvementClass-change.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- edited with XMLSpy v2014 rel. 2 (x64) (http://www.altova.com) by Soren Johnson (private) -->
+<!-- German Translation (© Revan ©) -->
+
 <Root>
 	<!--Assets/GameAssets/Resources/Infos/improvement.xml-->
 	<!--NOTE: improvement names that are mass nouns or plural do not need multiple types in Translation-->
@@ -19,13 +19,13 @@
 		<zType>TEXT_IMPROVEMENTCLASS_MINE</zType>
 		<Translation>Mine~eine Mine~Minen</Translation>
 	</Entry>
+		<Entry>
+		<zType>TEXT_IMPROVEMENTCLASS_QUARRY</zType>
+		<Translation>Steinbruch~ein Steinbruch~Steinbrüchen</Translation>
+	</Entry>
 	<Entry>
 		<zType>TEXT_IMPROVEMENTCLASS_LUMBERMILL</zType>
 		<Translation>Sägewerk~ein Sägewerk~Sägewerken</Translation>
-	</Entry>
-	<Entry>
-		<zType>TEXT_IMPROVEMENTCLASS_QUARRY</zType>
-		<Translation>Steinbruch~ein Steinbruch~Steinbrüchen</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_IMPROVEMENTCLASS_PASTURE</zType>
@@ -100,12 +100,24 @@
 		<Translation>Kloster~ein Kloster~Klöstern</Translation>
 	</Entry>
 	<Entry>
+		<zType>TEXT_IMPROVEMENTCLASS_MONASTERY_CUSTOM</zType>
+		<Translation>{0_customName} Kloster~ein {0_customName} Kloster~{0_customName} Klöster</Translation>
+	</Entry>
+	<Entry>
 		<zType>TEXT_IMPROVEMENTCLASS_TEMPLE</zType>
 		<Translation>Tempel~ein Tempel~Tempeln</Translation>
 	</Entry>
 	<Entry>
+		<zType>TEXT_IMPROVEMENTCLASS_TEMPLE_CUSTOM</zType>
+		<Translation>{0_customName} Tempel~ein {0_customName} Tempel~{0_customName} Tempel</Translation>
+	</Entry>
+	<Entry>
 		<zType>TEXT_IMPROVEMENTCLASS_CATHEDRAL</zType>
 		<Translation>Kathedrale~eine Kathedrale~Kathedralen</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_IMPROVEMENTCLASS_CATHEDRAL_CUSTOM</zType>
+		<Translation>{0_customName} Kathedrale~eine {0_customName} Kathedrale~{0_customName} Kathedralen</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_IMPROVEMENTCLASS_HOLY_SITE</zType>
