--- a/Translations/German/text-project-change.xml
+++ b/Translations/German/text-project-change.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- edited with XMLSpy v2014 rel. 2 (x64) (http://www.altova.com) by Soren Johnson (private) -->
+<!-- German Translation (© Revan ©) -->
+
 <Root>
 	<!--Assets/GameAssets/Resources/Infos/improvement.xml-->
 	<!--NOTE: improvement names that are mass nouns or plural do not need multiple types in Translation-->
@@ -32,6 +32,10 @@
 		<Translation>Wehrtürme</Translation>
 	</Entry>
 	<Entry>
+		<zType>TEXT_PROJECT_TREASURY</zType>
+		<Translation>Staatskassen</Translation>
+	</Entry>
+	<Entry>
 		<zType>TEXT_PROJECT_TREASURY_1</zType>
 		<Translation>Staatskasse I~eine Staatskasse I~Staatskassen I</Translation>
 	</Entry>
@@ -48,6 +52,10 @@
 		<Translation>Staatskasse IV~eine Staatskasse IV~Staatskassen IV</Translation>
 	</Entry>
 	<Entry>
+		<zType>TEXT_PROJECT_FORUM</zType>
+		<Translation>Gerichte</Translation>
+	</Entry>
+	<Entry>
 		<zType>TEXT_PROJECT_FORUM_1</zType>
 		<Translation>Gericht I~ein Gericht I~Gerichte I</Translation>
 	</Entry>
@@ -62,6 +70,10 @@
 	<Entry>
 		<zType>TEXT_PROJECT_FORUM_4</zType>
 		<Translation>Gericht IV~ein Gericht IV~Gerichte IV</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_PROJECT_ARCHIVE</zType>
+		<Translation>Archive</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_PROJECT_ARCHIVE_1</zType>
