--- a/Translations/German/text-specialistClass-change.xml
+++ b/Translations/German/text-specialistClass-change.xml
@@ -1,5 +1,5 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
-<!-- edited with XMLSpy v2014 rel. 2 sp1 (x64) (http://www.altova.com) by Soren Johnson (private) -->
+﻿<!-- German Translation (© Revan ©) -->
+
 <Root>
 	<!--Assets/GameAssets/Resources/Infos/specialist.xml-->
 	<Entry>
