--- a/Translations/German/text-tribe-change.xml
+++ b/Translations/German/text-tribe-change.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- edited with XMLSpy v2018 sp1 (x64) (http://www.altova.com) by Joel Bowers (Mohawk Games) -->
+<!-- German Translation (© Revan ©) -->
+
 <Root>
 	<!-- NOTE: Proper Name ~ Adjective ~ Indefinite & Adjective ~ Plural -->
 	<Entry>
@@ -27,23 +27,47 @@
 		<Translation>Gallier~Gallier~Gallier</Translation>
 	</Entry>
 	<Entry>
+		<zType>TEXT_TRIBE_GAULS_NICK</zType>
+		<Translation>der Gallier</Translation>
+	</Entry>
+	<Entry>
 		<zType>TEXT_TRIBE_VANDALS</zType>
 		<Translation>Vandalen~Vandale~Vandalen</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_TRIBE_VANDALS_NICK</zType>
+		<Translation>der Vandale</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRIBE_DANES</zType>
 		<Translation>Dänen~Däne~Dänen</Translation>
 	</Entry>
 	<Entry>
+		<zType>TEXT_TRIBE_DANES_NICK</zType>
+		<Translation>der Däne</Translation>
+	</Entry>
+	<Entry>
 		<zType>TEXT_TRIBE_THRACIANS</zType>
 		<Translation>Thraker~Thraker~Thraker</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_TRIBE_THRACIANS_NICK</zType>
+		<Translation>der Thraker</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRIBE_SCYTHIANS</zType>
 		<Translation>Skythen~Skythe~Skythen</Translation>
 	</Entry>
 	<Entry>
+		<zType>TEXT_TRIBE_SCYTHIANS_NICK</zType>
+		<Translation>der Skythe</Translation>
+	</Entry>
+	<Entry>
 		<zType>TEXT_TRIBE_NUMIDIANS</zType>
 		<Translation>Numiden~Numide~Numiden</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_TRIBE_NUMIDIANS_NICK</zType>
+		<Translation>der Numide</Translation>
 	</Entry>
 </Root>
